updated app name, routes etc

--- a/app1/src/main/resources/application.properties
+++ b/app1/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-server.servlet.contextPath=/
 server.port=8080
- 
-#actuator
-management.endpoint.restart.enabled=true
-management.endpoints.web.exposure.include=restart,health
+
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=true 
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
+
+
+spring.application.name=Vulnerable Spring App
