--- a/app1/Dockerfile
+++ b/app1/Dockerfile
@@ -1,10 +1,10 @@
 FROM openjdk:18
 
 WORKDIR /app
-COPY ./target/app1-0.0.1-SNAPSHOT.jar /app
+COPY ./target/vulnapp-0.0.1-SNAPSHOT.jar /app
 
 EXPOSE 8080
 
-CMD ["java", "-jar", "app1-0.0.1-SNAPSHOT.jar"]
+CMD ["java", "-jar", "vulnapp-0.0.1-SNAPSHOT.jar"]
 
 
