--- a/app1/Dockerfile
+++ b/app1/Dockerfile
@@ -1,10 +1,8 @@
 FROM openjdk:18
 
 WORKDIR /app
-COPY ./target/vulnapp-0.0.1-SNAPSHOT.jar /app
-
 EXPOSE 8080
-
+# jar on volume ./app1/target -> /app
 CMD ["java", "-jar", "vulnapp-0.0.1-SNAPSHOT.jar"]
 
 
