--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,15 +4,26 @@ version: "3.7"
 services:
   app1:
     build: app1
+    volumes:
+      - "./app1/target:/app"
     ports:
       - "8080:8080"
     networks:
       - frontend
       - backend
 
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/"]
+      interval: 1m
+      timeout: 10s
+      retries: 3
+      start_period: 1m
+
 
   app2:
     build: app2
+    ports:
+    - "80"
     networks:
       - backend
 
