--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,13 @@ services:
 
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8080/"]
-      interval: 1m
+      interval: 5s
       timeout: 10s
       retries: 3
-      start_period: 1m
+      start_period: 10s
 
+    restart: unless-stopped
+    
 
   app2:
     build: app2
