--- a/app1/pom.xml
+++ b/app1/pom.xml
@@ -68,11 +68,11 @@
 			<version>2.10.1</version>
 		</dependency>
 
-        <dependency>
-            <groupId>commons-validator</groupId>
-            <artifactId>commons-validator</artifactId>
-            <version>1.7</version> 
-        </dependency>
+		<dependency>
+			<groupId>commons-validator</groupId>
+			<artifactId>commons-validator</artifactId>
+			<version>1.7</version>
+		</dependency>
 
 
 	</dependencies>
@@ -83,6 +83,28 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jarsigner-plugin</artifactId>
+				<version>3.0.0</version>
+				<executions>
+					<execution>
+						<id>sign</id>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<keystore>../keystore/server-keystore.jks</keystore>
+					<alias>${env.SIGNING_KEY_ALIAS}</alias>
+					<storepass>${env.SIGNING_KEYSTORE_PASSWORD}</storepass>
+					<!--<keypass>Key password</keypass>-->
+				</configuration>
+			</plugin>
+
+
 		</plugins>
 	</build>
 
