--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,6 @@
 name: Build and Release
 
 
-
 on:
   push:
     branches: "patch"
@@ -22,7 +21,6 @@ jobs:
           server-id: github 
           settings-path: ${{ github.workspace }}
 
-
       - name: Decode Keystore
         id: decode_keystore
         uses: timheuer/base64-to-file@v1
@@ -30,13 +28,12 @@ jobs:
           fileName: 'keystore/server-keystore.jks'
           encodedString: ${{ secrets.KEYSTORE }}
 
-
       - name: Build with Maven and Sign JAR
-        run: mvn -B package --file app1/pom.xml 
         env:
-          SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
-          SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
-    
+          KEYSTORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
+          KEYSTORE_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+        run: |
+            mvn -B package --file app1/pom.xml 
    
       - uses: "marvinpinto/action-automatic-releases@latest"
         with:
