--- a/app1/pom.xml
+++ b/app1/pom.xml
@@ -97,7 +97,7 @@
 					</execution>
 				</executions>
 				<configuration>
-					<keystore>../keystore/server-keystore.jks</keystore>
+					<keystore>keystore/server-keystore.jks</keystore>
 					<alias>${env.KEYSTORE_ALIAS}</alias>
 					<storepass>${env.KEYSTORE_PASSWORD}</storepass>
 					<!--<keypass>Key password</keypass>-->
